[metadata]
name = blla
author = Benjamin Kiessling
author-email = mittagessen@l.unchti.me
summary = baseline recognition system for layout analysis
description-file = README.rst
license = Apache
classifier =
    Development Status :: 1 - Alpha
        Environment :: Console
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6


keywords =
    ocr
    segmentation

[bdist_wheel]
universal = 1

[files]
packages = blla 

[entry_points]
console_scripts =
    blla = blla.main:cli
